syntax = "proto3";

package scproto;

import "google/protobuf/timestamp.proto";

message File {
        string id                               = 1;
        string hash                             = 2;
        string filename                         = 3;
        google.protobuf.Timestamp document_date = 4;
        int64 size                              = 5;
}

message TaggedFile {
        File file         = 1;
        repeated Tag tags = 2;
}


message Tag {
        int64 id        = 1;
        string name     = 2;
        string category = 3;
        bool system     = 4;
}

message GetFileRequest {
        string id = 1;
}
message GetFileResponse {
        TaggedFile file = 1;
}

message FindFilesWithTagsRequest {
        repeated string tag_names = 1;
}
message FindFilesWithTagsResponse {
        repeated File files = 1;
}

message FindFilesWithIdPrefixRequest {
        string id_prefix = 1;
}
message FindFilesWithIdPrefixResponse {
        repeated File files = 1;
}

service Softcopy {
        rpc GetFile(GetFileRequest) returns (GetFileResponse) {}

        rpc FindFilesWithIdPrefix(FindFilesWithIdPrefixRequest) returns (FindFilesWithIdPrefixResponse) {}
        rpc FindFilesWithTags(FindFilesWithTagsRequest) returns (FindFilesWithTagsResponse) {}
}

message AllFileRequest {}

message DownloadFileRequest {
        string id = 1;
}
message DownloadFileResponse {
        bytes data = 1;
}

service SoftcopyAdmin {
        rpc AllFiles(AllFileRequest) returns (stream TaggedFile) {}
        rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileResponse) {}
}